--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
     "pinia": "^3.0.2",
+    "three": "^0.176.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vue3-tree-org": "^4.2.2"
