--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
+    "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1",
     "pinia": "^3.0.2",
     "three": "^0.176.0",
     "vue": "^3.5.13",
